base/src/test/resources/failure/tactic/nested-tactic.aya.txt
In file $FILE:12:31 ->

  10 | 
  11 | 
  12 | example def simpleTac1: Nat => tactic {
                                      ^^
  13 |   | {??} + {??}
  14 |   | tactic { | suc {??} | zero }
  15 |   | zero
  16 | }

Error: tactic {
         | suc {??}
         | zero
       }
       
       is nested in
       
       tactic {
         | {??} + {??}
         | tactic {
           | suc {??}
           | zero
         }
         | zero
       }

1 error(s), 0 warning(s).
What are you doing?
